--- a/libzkonvif/src/Makefile.in
+++ b/libzkonvif/src/Makefile.in
@@ -308,7 +308,7 @@ libzkonvif_a_SOURCES = ../soap/nsmap.cpp		\
 	../soap/soapRemoteDiscoveryBindingService.cpp		\
 	../soap/soapwsddProxy.cpp			\
 	../soap/soapwsddService.cpp	\
-	../gsoap/stdsoap2.cpp
+	../soap/stdsoap2.cpp
 
 all: all-am
 
@@ -613,19 +613,19 @@ soapwsddService.obj: ../soap/soapwsddService.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o soapwsddService.obj `if test -f '../soap/soapwsddService.cpp'; then $(CYGPATH_W) '../soap/soapwsddService.cpp'; else $(CYGPATH_W) '$(srcdir)/../soap/soapwsddService.cpp'; fi`
 
-stdsoap2.o: ../gsoap/stdsoap2.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT stdsoap2.o -MD -MP -MF $(DEPDIR)/stdsoap2.Tpo -c -o stdsoap2.o `test -f '../gsoap/stdsoap2.cpp' || echo '$(srcdir)/'`../gsoap/stdsoap2.cpp
+stdsoap2.o: ../soap/stdsoap2.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT stdsoap2.o -MD -MP -MF $(DEPDIR)/stdsoap2.Tpo -c -o stdsoap2.o `test -f '../soap/stdsoap2.cpp' || echo '$(srcdir)/'`../soap/stdsoap2.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/stdsoap2.Tpo $(DEPDIR)/stdsoap2.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='../gsoap/stdsoap2.cpp' object='stdsoap2.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='../soap/stdsoap2.cpp' object='stdsoap2.o' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o stdsoap2.o `test -f '../gsoap/stdsoap2.cpp' || echo '$(srcdir)/'`../gsoap/stdsoap2.cpp
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o stdsoap2.o `test -f '../soap/stdsoap2.cpp' || echo '$(srcdir)/'`../soap/stdsoap2.cpp
 
-stdsoap2.obj: ../gsoap/stdsoap2.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT stdsoap2.obj -MD -MP -MF $(DEPDIR)/stdsoap2.Tpo -c -o stdsoap2.obj `if test -f '../gsoap/stdsoap2.cpp'; then $(CYGPATH_W) '../gsoap/stdsoap2.cpp'; else $(CYGPATH_W) '$(srcdir)/../gsoap/stdsoap2.cpp'; fi`
+stdsoap2.obj: ../soap/stdsoap2.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT stdsoap2.obj -MD -MP -MF $(DEPDIR)/stdsoap2.Tpo -c -o stdsoap2.obj `if test -f '../soap/stdsoap2.cpp'; then $(CYGPATH_W) '../soap/stdsoap2.cpp'; else $(CYGPATH_W) '$(srcdir)/../soap/stdsoap2.cpp'; fi`
 @am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/stdsoap2.Tpo $(DEPDIR)/stdsoap2.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='../gsoap/stdsoap2.cpp' object='stdsoap2.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='../soap/stdsoap2.cpp' object='stdsoap2.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o stdsoap2.obj `if test -f '../gsoap/stdsoap2.cpp'; then $(CYGPATH_W) '../gsoap/stdsoap2.cpp'; else $(CYGPATH_W) '$(srcdir)/../gsoap/stdsoap2.cpp'; fi`
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o stdsoap2.obj `if test -f '../soap/stdsoap2.cpp'; then $(CYGPATH_W) '../soap/stdsoap2.cpp'; else $(CYGPATH_W) '$(srcdir)/../soap/stdsoap2.cpp'; fi`
 
 ID: $(am__tagged_files)
 	$(am__define_uniq_tagged_files); mkid -fID $$unique
