--- a/libzkonvif/configure.ac
+++ b/libzkonvif/configure.ac
@@ -32,5 +32,5 @@ AC_TYPE_SIZE_T
 
 # Checks for library functions.
 
-AC_OUTPUT([ Makefile src/Makefile
+AC_OUTPUT([ Makefile src/Makefile test/Makefile
 		 ])
