--- a/libzkonvif/test/Makefile.am
+++ b/libzkonvif/test/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS= test_target_dm
 
-test_target_dm_SOURCES= test_target_dm.cpp
+test_target_dm_SOURCES= test_target_dm.cpp ../../common/utils.cpp
 test_target_dm_LDADD= ../src/libzkonvif.a -lccgnu2
