add test_client_dm project:    测试思路：从 dm.GetServices() 得到所有服务，然后对每个服务编写测试代码 ...

--- a/libzkonvif/test/Makefile.am
+++ b/libzkonvif/test/Makefile.am
@@ -1,4 +1,8 @@
-bin_PROGRAMS= test_target_dm
+bin_PROGRAMS= test_target_dm test_client_dm
 
 test_target_dm_SOURCES= test_target_dm.cpp ../../common/utils.cpp MyEvent.cpp
 test_target_dm_LDADD= ../src/libzkonvif.a -lccgnu2
+
+test_client_dm_SOURCES= test_client_dm.cpp
+test_client_dm_LDADD= ../src/libzkonvif.a -lccgnu2
+
