--- a/libzkonvif/configure.ac
+++ b/libzkonvif/configure.ac
@@ -13,6 +13,7 @@ AC_PROG_CC
 AC_PROG_MAKE_SET
 AM_PROG_AR
 AC_PROG_RANLIB
+AC_PROG_LIBTOOL
 
 AC_SUBST(GLOBAL_CXXFLAGS)
 GLOBAL_CXXFLAGS='-DZONEKEY_SOURCE'
@@ -29,6 +30,7 @@ AC_CHECK_HEADERS([openssl/ssl.h])
 AC_CHECK_HEADER_STDBOOL
 AC_C_INLINE
 AC_TYPE_SIZE_T
+
 
 # Checks for library functions.
 
