新增 libzkreg: 用于服务注册到本级的 dm

--- a/libzkonvif/configure.ac
+++ b/libzkonvif/configure.ac
@@ -33,5 +33,5 @@ AC_TYPE_SIZE_T
 
 # Checks for library functions.
 
-AC_OUTPUT([ Makefile src/Makefile test/Makefile
+AC_OUTPUT([ Makefile src/Makefile test/Makefile libzkreg/Makefile
 		 ])
