libvisca: 扩展支持 vk3344 串口驱动

--- a/3rd/libvisca-1.1.0/visca/Makefile.am
+++ b/3rd/libvisca-1.1.0/visca/Makefile.am
@@ -9,7 +9,7 @@ libvisca_la_LDFLAGS = -version-info @lt_major@:@lt_revision@:@lt_age@
 libvisca_la_SOURCES =  \
 		libvisca.c 		\
 		libvisca.h		\
-		libvisca_posix.c
+		libvisca_hi3531.c
 
 # headers to be installed
 pkginclude_HEADERS = libvisca.h
