libvisca: 支持 hi3531 VK3344

--- a/3rd/libvisca-1.1.0/configure.in
+++ b/3rd/libvisca-1.1.0/configure.in
@@ -28,4 +28,4 @@ pkgincludedir='$(includedir)/visca'
 AC_SUBST(pkgincludedir)
 
 CFLAGS="$CFLAGS -Wall -Wunused"
-AC_OUTPUT([ Makefile visca/Makefile examples/Makefile VC2005/Makefile])
+AC_OUTPUT([ Makefile visca/Makefile examples/Makefile ])
