--- a/3rd/libvisca-1.1.0/Makefile.am
+++ b/3rd/libvisca-1.1.0/Makefile.am
@@ -1,5 +1,5 @@
 # process this file with automake to create a Makefile.in
 
-SUBDIRS = visca examples VC2005
+SUBDIRS = visca examples 
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config.h.in stamp-h.in
 
