zkdm: 新增 dm 模块，支持：    /dm/list: 列出所有服务    /dm/<service name>/<operator>: 对服务的操作，包含：        operator:             start: 启动服务             stop: 停止服务             disable: 禁用服务             enable：启用服务

--- a/zkdm/python/zkdm/dm/config.json
+++ b/zkdm/python/zkdm/dm/config.json
@@ -1,9 +1,1 @@
-{ "services": 
-	[
-		{ 
-			"name": "event service",
-			"exec": "python ../event/EventSever.py",
-			"enable": 1
-		}
-	]
-}
+{"services": [{"fork": true, "enable": true, "name": "event service", "title": "事件服务", "path": "python ../event/EventServer.py", "type": "event"}, {"fork": true, "enable": false, "name": "teacher video 1", "title": "教师特写摄像头", "path": "cardlive.exe 1", "type": "eval"}]}
