--- a/zkdm/python/zkdm/dm/config.json
+++ b/zkdm/python/zkdm/dm/config.json
@@ -1,1 +1,31 @@
-{"services": [{"fork": true, "enable": true, "name": "event service", "title": "事件服务", "path": "python ../event/EventServer.py", "type": "event"}, {"fork": true, "enable": false, "name": "teacher video 1", "title": "教师特写摄像头", "path": "cardlive.exe 1", "type": "eval"}]}
+{
+   "services" : [
+      {
+         "enable" : true,
+         "fork" : true,
+         "name" : "event service",
+         "type" : "event",
+         "path" : "python ../event/EventServer.py",
+         "title" : "事件服务",
+		 "url" : "http://localhost:10001"
+      },
+      {
+         "enable" : false,
+         "fork" : true,
+         "name" : "teacher video 1",
+         "type" : "eval",
+         "path" : "cardlive.exe 1",
+         "title" : "教师特写摄像头",
+	 	 "url" : "tcp://localhost:3000"
+      },
+	  {
+		  "enable" : true,
+		  "fork": true,
+		  "name": "ptzs service",
+		  "type": "ptz",
+		  "path" : "python ../ptz/PtzServer.py",
+		  "title" : "云台服务",
+		  "url" : "http://localhost:10003"
+	  }
+   ]
+}
