--- a/zkdm/python/zkdm/dm/config.json
+++ b/zkdm/python/zkdm/dm/config.json
@@ -1,31 +1,1 @@
-{
-   "services" : [
-      {
-         "enable" : true,
-         "fork" : true,
-         "name" : "event service",
-         "type" : "event",
-         "path" : "python ../event/EventServer.py",
-         "title" : "事件服务",
-		 "url" : "http://<ip>:10001/event"
-      },
-      {
-         "enable" : false,
-         "fork" : true,
-         "name" : "teacher video 1",
-         "type" : "eval",
-         "path" : "cardlive.exe 1",
-         "title" : "教师特写摄像头",
-	 	 "url" : "tcp://<ip>:3000"
-      },
-	  {
-		  "enable" : true,
-		  "fork": true,
-		  "name": "ptzs service",
-		  "type": "ptz",
-		  "path" : "python ../ptz/PtzServer.py",
-		  "title" : "云台服务",
-		  "url" : "http://<ip>:10003/ptz"
-	  }
-   ]
-}
+{"services": [{"fork": true, "enable": true, "name": "event service", "title": "事件服务", "url": "http://<ip>:10001/event", "path": "python ../event/EventServer.py", "type": "event"}, {"fork": true, "enable": false, "name": "teacher video 1", "title": "教师特写摄像头", "url": "tcp://<ip>:3000", "path": "cardlive.exe 1", "type": "eval"}, {"fork": true, "enable": true, "name": "ptzs service", "title": "云台服务", "url": "http://<ip>:10003/ptz", "path": "python ../ptz/PtzServer.py", "type": "ptz"}]}
