--- a/zkdm/python/zkdm/dm/config.json
+++ b/zkdm/python/zkdm/dm/config.json
@@ -1,1 +1,40 @@
-{"services": [{"fork": true, "enable": true, "name": "event service", "title": "事件服务", "url": "http://<ip>:10001/event", "path": "python ../event/EventServer.py", "type": "event"}, {"fork": true, "enable": false, "name": "teacher video 1", "title": "教师特写摄像头", "url": "tcp://<ip>:3000", "path": "cardlive.exe 1", "type": "eval"}, {"fork": true, "enable": true, "name": "ptzs service", "title": "云台服务", "url": "http://<ip>:10003/ptz", "path": "python ../ptz/PtzServer.py", "type": "ptz"}]}
+{
+   "services" : [
+      {
+         "enable" : true,
+         "fork" : true,
+         "url" : "http://<ip>:10001/event",
+         "name" : "event service",
+         "type" : "event",
+         "path" : "python ../event/EventServer.py",
+         "title" : "事件服务"
+      },
+      {
+         "enable" : false,
+         "fork" : true,
+         "url" : "tcp://<ip>:3000",
+         "name" : "teacher video 1",
+         "type" : "eval",
+         "path" : "cardlive.exe 1",
+         "title" : "教师特写摄像头"
+      },
+      {
+         "enable" : false,
+         "fork" : true,
+         "url" : "http://<ip>:10003/ptz",
+         "name" : "ptzs service",
+         "type" : "ptz",
+         "path" : "python ../ptz/PtzServer.py",
+         "title" : "云台服务"
+      },
+	  {
+		  "enable": true,
+		  "fork": true,
+		  "url": "http://<ip>:10005/log",
+		  "name": "Log service",
+		  "type": "log",
+		  "path" : "python ../log/LogServer.py",
+		  "title": "日志服务"
+	  }
+   ]
+}
