zkdm: ptz: 不再依赖其他模块，新增 ptz_open_with_config() 方法，用以支持读取配置文件，老的 ptz_open() 不应继续使用

--- a/zkdm/python/zkdm/ptz/config.json
+++ b/zkdm/python/zkdm/ptz/config.json
@@ -2,16 +2,20 @@
 	"ptzs": [
 		{
 			"name": "teacher",
-			"config": {
+			"config": 
+			{
 				"serial": "COM6",
-				"addr":1
+				"addr":1,
+				"extent": "teacher.config"
 			}
 		},
 		{
 			"name": "student",
-			"config": {
+			"config": 
+			{
 				"serial": "COM3",
-				"addr":1
+				"addr":1,
+				"extent": "student.config"
 			}
 		}
 	]
