--- a/zkdm/ptz/Makefile.am
+++ b/zkdm/ptz/Makefile.am
@@ -1,4 +1,4 @@
 lib_LTLIBRARIES= libzkptz.la
 
-libzkptz_la_SOURCES= ptz.cpp
+libzkptz_la_SOURCES= ptz.cpp KVConfig.cpp polyfit.cpp ZoomValueConvert.cpp
 libzkptz_la_LIBADD= -lvisca
