--- a/zkdm/win32/zkptz/zkptz/zkptz.vcxproj
+++ b/zkdm/win32/zkptz/zkptz/zkptz.vcxproj
@@ -121,7 +121,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
-      <OptimizeReferences>true</OptimizeReferences>
+      <OptimizeReferences>false</OptimizeReferences>
       <ModuleDefinitionFile>exports.def</ModuleDefinitionFile>
       <AdditionalDependencies>libkvconfig.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
