--- a/zkdm/win32/zkptz/zkptz/zkptz.vcxproj
+++ b/zkdm/win32/zkptz/zkptz/zkptz.vcxproj
@@ -146,19 +146,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\3rd\libvisca-1.1.0\visca\libvisca.c" />
+    <ClCompile Include="..\..\..\..\3rd\libvisca-1.1.0\visca\libvisca_win32.c" />
     <ClCompile Include="..\..\..\ptz\KVConfig.cpp" />
     <ClCompile Include="..\..\..\ptz\polyfit.cpp" />
     <ClCompile Include="..\..\..\ptz\ptz.cpp" />
     <ClCompile Include="..\..\..\ptz\ZoomValueConvert.cpp" />
-    <ClCompile Include="libvisca.c" />
-    <ClCompile Include="libvisca_win32.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\3rd\libvisca-1.1.0\visca\libvisca.h" />
     <ClInclude Include="..\..\..\ptz\KVConfig.h" />
     <ClInclude Include="..\..\..\ptz\polyfit.h" />
     <ClInclude Include="..\..\..\ptz\ptz.h" />
     <ClInclude Include="..\..\..\ptz\ZoomValueConvert.h" />
-    <ClInclude Include="libvisca.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="exports.def" />
