realize circular queue

--- a/3rd/libvisca-1.1.0/visca/Makefile.am
+++ b/3rd/libvisca-1.1.0/visca/Makefile.am
@@ -11,6 +11,7 @@ libvisca_la_SOURCES =  \
 		libvisca.h		\
 		libvisca_hi3531.c
 
+libvisca_la_CFLAGS= -DVK3344
 # headers to be installed
 pkginclude_HEADERS = libvisca.h
 
