--- a/zkdm/ptz/Makefile.am
+++ b/zkdm/ptz/Makefile.am
@@ -1,11 +1,9 @@
 lib_LTLIBRARIES= libzkptz.la
 
-libzkptz_la_SOURCES= ptz.cpp KVConfig.cpp polyfit.cpp ZoomValueConvert.cpp \
-					 ../../3rd/libvisca-1.1.0/visca/libvisca.c \
-					 ../../3rd/libvisca-1.1.0/visca/libvisca_win32.c
+libzkptz_la_SOURCES= ptz.cpp KVConfig.cpp polyfit.cpp ZoomValueConvert.cpp
 
 
 libzkptz_la_CFLAGS= -I../../3rd/libvisca-1.1.0/visca/
 libzkptz_la_LDFLAGS= -no-undefined
-
+libzkptz_la_LIBADD= -lvisca
 
