解决 ptz服务 重复执行程序问题

--- a/zkdm/python/zkdm-setup/zkdm/ptz/student.config
+++ b/zkdm/python/zkdm-setup/zkdm/ptz/student.config
@@ -1,5 +1,13 @@
-ptz_serial_name=COM8
+﻿                                         #请修改学生配置参数,并保存
+ptz_serial_name=COM4
+
 ptz_addr=1
+
+#摄像机水平广角
+
 hva=55.2
+
+#摄像机垂直广角
+
 vva=42.1
 
