支持云台验证

--- a/zkdm/win32/zonekey_ptz_verify/zonekey_ptz_verify.vcxproj
+++ b/zkdm/win32/zonekey_ptz_verify/zonekey_ptz_verify.vcxproj
@@ -75,8 +75,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\3rd\libvisca-1.1.0\visca\libvisca.c" />
-    <ClCompile Include="..\..\3rd\libvisca-1.1.0\visca\libvisca_win32.c" />
+    <ClCompile Include="..\..\..\3rd\libvisca-1.1.0\visca\libvisca.c" />
+    <ClCompile Include="..\..\..\3rd\libvisca-1.1.0\visca\libvisca_win32.c" />
     <ClCompile Include="..\..\ptz\KVConfig.cpp" />
     <ClCompile Include="..\..\ptz\polyfit.cpp" />
     <ClCompile Include="..\..\ptz\ptz.cpp" />
@@ -84,7 +84,6 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\3rd\libvisca-1.1.0\visca\libvisca.h" />
     <ClInclude Include="..\..\ptz\KVConfig.h" />
     <ClInclude Include="..\..\ptz\polyfit.h" />
     <ClInclude Include="..\..\ptz\ptz.h" />
