--- a/zkdm/python/zkdm/dm/config.json
+++ b/zkdm/python/zkdm/dm/config.json
@@ -1,7 +1,7 @@
 {
    "services" : [
       {
-         "enable" : false,
+         "enable" : true,
          "fork" : true,
          "url" : "http://<ip>:10003/ptz",
          "name" : "ptz.service",
@@ -28,7 +28,7 @@
          "title" : "教师特写摄像头"
       },
       {
-         "enable" : false,
+         "enable" : true,
          "fork" : true,
          "url" : "http://<ip>:10005/log",
          "name" : "Log.service",
@@ -37,7 +37,7 @@
          "title" : "日志服务"
       },
       {
-         "enable" : false,
+         "enable" : true,
          "fork" : true,
          "url" : "http://<ip>:10006/recording",
          "name" : "recording.service",
