ServiceManager: 启动服务之前，首先进入该服务的目录

--- a/zkdm/python/zkdm/dm/config.json
+++ b/zkdm/python/zkdm/dm/config.json
@@ -28,7 +28,7 @@
          "title" : "教师特写摄像头"
       },
       {
-         "enable" : false,
+         "enable" : true,
          "fork" : true,
          "url" : "http://<ip>:10005/log",
          "name" : "Log.service",
