--- a/zkdm/python/zkdm/host/config.json
+++ b/zkdm/python/zkdm/host/config.json
@@ -1,20 +1,10 @@
 {
-	
-	"host":
-	
-	{
-		
+	"host": {
 		"type" : "JP100"	
-	
 	},
 
-	
-	"regHbService":
-	
-	{
-		"sip" : "192.168.12.46",
+	"regHbService": {
+		"sip" : "172.16.1.14",
 		"sport" :"8080" 
-	
 	}
-
 }
