--- a/zkdm/python/zkdm/dm/config.json
+++ b/zkdm/python/zkdm/dm/config.json
@@ -1,7 +1,7 @@
 {
    "services" : [
       {
-         "enable" : true,
+         "enable" : false,
          "fork" : true,
          "url" : "http://<ip>:10003/ptz",
          "name" : "ptz.service",
