--- a/zkdm/python/zkdm/ptz/card0.config
+++ b/zkdm/python/zkdm/ptz/card0.config
@@ -1,17 +1,18 @@
-				#ÇëÐÞ¸Ä½ÌÊ¦ÅäÖÃ²ÎÊý,²¢±£´æ
+ï»¿#è¯·ä¿®æ”¹æ•™å¸ˆé…ç½®å‚æ•°,å¹¶ä¿å­˜
 
-ptz_serial_name=COM2
-
-ptz_addr=2
+ptz_serial_name=COM1
 
 
-#ÉãÏñ»úË®Æ½¹ã½Ç
+ptz_addr=1
+
+
+#æ‘„åƒæœºæ°´å¹³å¹¿è§’
 
 
 hva=55.2
 
 
-#ÉãÏñ»ú´¹Ö±¹ã½Ç
+#æ‘„åƒæœºåž‚ç›´å¹¿è§’
 
 
 vva=42
