--- a/zkdm/python/zkdm/ptz/card2.config
+++ b/zkdm/python/zkdm/ptz/card2.config
@@ -1,19 +1,19 @@
-                                         #ÇëÐÞ¸ÄÑ§ÉúÅäÖÃ²ÎÊý,²¢±£´æ
+ï»¿#è¯·ä¿®æ”¹å­¦ç”Ÿé…ç½®å‚æ•°,å¹¶ä¿å­˜
 
 
-ptz_serial_name=COM2
+ptz_serial_name=COM4
 
 
 ptz_addr=1
 
 
-#ÉãÏñ»úË®Æ½¹ã½Ç
+#æ‘„åƒæœºæ°´å¹³å¹¿è§’
 
 
 hva=55.2
 
 
-#ÉãÏñ»ú´¹Ö±¹ã½Ç
+#æ‘„åƒæœºåž‚ç›´å¹¿è§’
 
 
 vva=42
