--- a/zkdm/python/zkdm/ptz/card0.config
+++ b/zkdm/python/zkdm/ptz/card0.config
@@ -1,18 +1,7 @@
-ï»¿#è¯·ä¿®æ”¹æ•™å¸ˆé…ç½®å‚æ•°,å¹¶ä¿å­˜
-
-ptz_serial_name=COM1
-
-
-ptz_addr=1
-
-
-#æ‘„åƒæœºæ°´å¹³å¹¿è§’
-
-
+#ÇëÐÞ¸Ä½ÌÊ¦ÅäÖÃ²ÎÊý,²¢±£´æ
+ptz_serial_name=COM2
+ptz_addr=2
+#ÉãÏñ»úË®Æ½¹ã½Ç
 hva=55.2
-
-
-#æ‘„åƒæœºåž‚ç›´å¹¿è§’
-
-
+#ÉãÏñ»ú´¹Ö±¹ã½Ç
 vva=42
