--- a/zkdm/python/zkdm/ptz/card2.config
+++ b/zkdm/python/zkdm/ptz/card2.config
@@ -1,19 +1,7 @@
-ï»¿#è¯·ä¿®æ”¹å­¦ç”Ÿé…ç½®å‚æ•°,å¹¶ä¿å­˜
-
-
-ptz_serial_name=COM4
-
-
+#ÇëÐÞ¸ÄÑ§ÉúÅäÖÃ²ÎÊý,²¢±£´æ
+ptz_serial_name=COM2
 ptz_addr=1
-
-
-#æ‘„åƒæœºæ°´å¹³å¹¿è§’
-
-
+#ÉãÏñ»úË®Æ½¹ã½Ç
 hva=55.2
-
-
-#æ‘„åƒæœºåž‚ç›´å¹¿è§’
-
-
+#ÉãÏñ»ú´¹Ö±¹ã½Ç
 vva=42
