--- a/zkdm/win32/zkptz/zkptz/zkptz.vcxproj
+++ b/zkdm/win32/zkptz/zkptz/zkptz.vcxproj
@@ -151,6 +151,8 @@
     <ClCompile Include="..\..\..\ptz\KVConfig.cpp" />
     <ClCompile Include="..\..\..\ptz\polyfit.cpp" />
     <ClCompile Include="..\..\..\ptz\ptz.cpp" />
+    <ClCompile Include="..\..\..\ptz\serial_win32.cpp" />
+    <ClCompile Include="..\..\..\ptz\visca.cpp" />
     <ClCompile Include="..\..\..\ptz\ZoomValueConvert.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -158,6 +160,8 @@
     <ClInclude Include="..\..\..\ptz\KVConfig.h" />
     <ClInclude Include="..\..\..\ptz\polyfit.h" />
     <ClInclude Include="..\..\..\ptz\ptz.h" />
+    <ClInclude Include="..\..\..\ptz\serial_win32.h" />
+    <ClInclude Include="..\..\..\ptz\visca.h" />
     <ClInclude Include="..\..\..\ptz\ZoomValueConvert.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
